@@ -2,6 +2,7 @@
  - Add description about tool to doc.
  - Add option for match string.
  - Fix test dependencies.
+ - Update Module::Install to 1.21 version.
 
 0.01 2023-04-26T23:06:30+02:00
  - First version.
